# HolySHT

./: .gitignore  README.md  setup_holysht.m
+holysht/: alm2map.m  map2alm.m
+holysht/private/: healpix_ring_info.m
mex/: CMakeLists.txt  ducc0_mex_utils.h  holysht_alm2map_mex.cpp  holysht_map2alm_mex.cpp
python/: CMakeLists.txt  benchmark.py  benchmark.sh  holysht_pybind.cpp  make_readme_plot.py  pyproject.toml
python/holysht/: __init__.py  _ring_info.py  transforms.py
python/tests/: test_holysht.py
src/ducc0/sht/: sht.cc  sht.h  sht_utils.h
test/: run_tests.m  test_holysht.m
