[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "holysht"
version = "0.1.0"
description = "Fast HEALPix spherical harmonic transforms via DUCC"
license = "GPL-2.0-only"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
